# hokey-pokey

./: .gitignore  ChangeLog.md  README.md  basement-0.0.11.patch  cabal.project  ci.nix  cryptonite-openssl-0.7.patch  default.nix  extra-1.6.18.patch  hokey-pokey.cabal  module.nix  plutus-compilation-service.cabal  repl.nix  shell.nix
app/: Main.hs
data/: hokey-pokey-builder-json.nix  hokey-pokey-builder.nix
data/defaultProject/: cabal.project
nix/: sources.json
nixops/: hokey-pokey.nix  test-vbox.nix  test.nix
src/: CompilationService.hs
src/CompilationService/: API.hs  App.hs
test/: Spec.hs  test.json
test-ubuntu-plutusc/: Dockerfile
