cabal-version: 1.12
name:           hokey-pokey
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/JoshMeredith/hokey-pokey#readme>
homepage:       https://github.com/input-output-hk/hokey-pokey#readme
bug-reports:    https://github.com/input-output-hk/hokey-pokey/issues
author:         Josh Meredith
maintainer:     joshmeredith2008@gmail.com
copyright:
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/hokey-pokey

library
  exposed-modules:
      CompilationService
  other-modules:
      Paths_hokey_pokey
  hs-source-dirs:
      src
  build-depends:
      BoundedChan
    , base >=4.7 && <5
    , bytestring
    , cereal
    , mtl
    , process
    , servant
    , servant-server
    , wai
    , warp
    , Cabal
  default-language: Haskell2010

executable hokey-pokey
  main-is: Main.hs
  other-modules:
      Paths_hokey_pokey
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      BoundedChan
    , base >=4.7 && <5
    , bytestring
    , cereal
    , mtl
    , hokey-pokey
    , process
    , servant
    , servant-server
    , wai
    , warp
  default-language: Haskell2010

test-suite hokey-pokey-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hokey_pokey
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      BoundedChan
    , base >=4.7 && <5
    , bytestring
    , cereal
    , mtl
    , hokey-pokey
    , process
    , servant
    , servant-server
    , wai
    , warp
  default-language: Haskell2010
