cabal-version:  1.12
name:           hokey-pokey
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/input-output-hk/hokey-pokey#readme>
homepage:       https://github.com/input-output-hk/hokey-pokey#readme
bug-reports:    https://github.com/input-output-hk/hokey-pokey/issues
author:         Josh Meredith
maintainer:     joshmeredith2008@gmail.com
copyright:
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

data-dir: data
data-files:
  defaultProject/cabal.project
  ./hokey-pokey-builder-json.nix
  ./hokey-pokey-builder.nix

source-repository head
  type: git
  location: https://github.com/input-output-hk/hokey-pokey

library
  exposed-modules:
      CompilationService.API
      CompilationService.App
  other-modules:
      Paths_hokey_pokey
  hs-source-dirs:
      src
  build-depends:
      aeson
    , BoundedChan
    , base >=4.7 && <5
    , bytestring
    , cereal
    , deepseq
    , directory
    , filepath
    , json-schema
    , mtl
    , pretty-show
    , process
    , servant
    , servant-server
    , swagger2
    , text
    , wai
    , warp
    , Cabal
  default-language: Haskell2010
  ghc-options: -Wall

executable hokey-pokey
  main-is: Main.hs
  other-modules:
      Paths_hokey_pokey
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      BoundedChan
    , base >=4.7 && <5
    , bytestring
    , cereal
    , hokey-pokey
    , mtl
    , process
    , servant
    , servant-server
    , wai
    , warp
  default-language: Haskell2010

test-suite hokey-pokey-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hokey_pokey
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      aeson
    , aeson-lens
    , BoundedChan
    , base >=4.7 && <5
    , bytestring
    , cereal
    , directory
    , hokey-pokey
    , hspec
    , hspec-wai
    , http-client
    , http-types
    , lens
    , mtl
    , process
    , servant
    , servant-client
    , servant-server
    , servant-quickcheck
    , temporary
    , text
    , unordered-containers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010
